--- a/po/fr.po
+++ b/po/fr.po
@@ -530,7 +530,7 @@ msgstr ""
 "Seuls les administrateurs système ont la permission de faire cette action."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Voulez-vous déplacer les fichiers sélectionnés dans la corbeille ?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -546,7 +546,7 @@ msgid "Please enter a new name:"
 msgstr "Entrez un nouveau nom:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Êtes vous sûr de vouloir vider la corbeille ?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
