--- a/po/bg.po
+++ b/po/bg.po
@@ -542,7 +542,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Само администратора има привилегии да направи това."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Искате ли да преместите файловете в кошчето?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -558,7 +558,7 @@ msgid "Please enter a new name:"
 msgstr "Моля, въведете ново име:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Наистина ли искате да изпразните кошчето?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
