--- a/po/el.po
+++ b/po/el.po
@@ -529,7 +529,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Μόνο ο διαχειριστής του συστήματος έχει δικαίωμα να το κάνει."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Θέλετε να μετακινήσετε τα επιλεγμένα αρχεία στον κάδο απορριμάτων;"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -545,7 +545,7 @@ msgid "Please enter a new name:"
 msgstr "Παρακαλώ εισάγετε ένα νέο όνομα:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Είστε σίγουροι ότι θέλετε να αδειάσει ο κάδος απορριμάτων;"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
