--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -515,8 +515,8 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Only system administrators have the permission to do this."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
-msgstr "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
+msgstr "Do you want to move the selected files to trash can?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
 msgid "Do you want to delete the selected files?"
@@ -531,7 +531,7 @@ msgid "Please enter a new name:"
 msgstr "Please enter a new name:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Are you sure you want to empty the Rubbish Bin?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
