--- a/po/fo.po
+++ b/po/fo.po
@@ -528,7 +528,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Vil tú flyta tær valdu fílurnar í ruskspannina"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -544,7 +544,7 @@ msgid "Please enter a new name:"
 msgstr "Vinarliga skriva eitt nýtt navn"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Er tú viss/ur í at tøma ruskspannina?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
