--- a/po/he.po
+++ b/po/he.po
@@ -519,7 +519,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "רק למנהל המערכת ישנן ההרשאות לעשות זאת."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "האם להעביר את הקבצים הנבחרים אל סל האשפה?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -535,7 +535,7 @@ msgid "Please enter a new name:"
 msgstr "נא להזין שם חדש:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "האם לפנות את סל האשפה?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
