--- a/po/hr.po
+++ b/po/hr.po
@@ -513,7 +513,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -529,7 +529,7 @@ msgid "Please enter a new name:"
 msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr ""
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
