--- a/po/it.po
+++ b/po/it.po
@@ -526,7 +526,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Solo l'amministratore del sistema ha permesso di fare questo."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Vuoi muovere i file selezionati nel cestino?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -542,7 +542,7 @@ msgid "Please enter a new name:"
 msgstr "Per favore inserisci un nuovo nome:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Sei sicuro di voler svuotare il cestino?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
