--- a/po/pl.po
+++ b/po/pl.po
@@ -531,7 +531,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Tylko administrators systemu posiada uprawnienia aby to wykonać."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Czy chcesz przenieść zaznaczone pliki do kosza?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -547,7 +547,7 @@ msgid "Please enter a new name:"
 msgstr "Wprowadź nową nazwę:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Czy napewno opróżnić kosz?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
