--- a/po/pt.po
+++ b/po/pt.po
@@ -524,7 +524,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Apenas o administrador do sistema tem permissões para o fazer."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr "Deseja mover os ficheiros seleccionados para o lixo?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
@@ -540,7 +540,7 @@ msgid "Please enter a new name:"
 msgstr "Indique o novo nome:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Tem a certeza que pretende esvaziar o lixo?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
