--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -541,7 +541,7 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Somente administradores de sistemas tem permissão para fazer isto."
 
 #: ../src/gtk/fm-gtk-utils.c:461
-msgid "Do you want to move the selected files to trash bin?"
+msgid "Do you want to move the selected files to trash can?"
 msgstr ""
 "Você deseja mover os arquivos selecionados para a lixeira?"
 
@@ -558,7 +558,7 @@ msgid "Please enter a new name:"
 msgstr "Favor digitar um novo nome:"
 
 #: ../src/gtk/fm-gtk-utils.c:552
-msgid "Are you sure you want to empty the trash bin?"
+msgid "Are you sure you want to empty the trash can?"
 msgstr "Você tem certeza que deseja esvaziar a lixeira?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
