--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-25 03:06+0800\n"
+"POT-Creation-Date: 2010-04-25 03:19+0800\n"
 "PO-Revision-Date: 2010-03-31 09:47+0100\n"
 "Last-Translator: Andrea Florio <andrea@opensuse.org>\n"
 "Language-Team: it <it@li.org>\n"
@@ -381,9 +381,9 @@ msgstr "Finito"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid ""
-"Some files cannot be moved to trash can becausethe underlying file systems "
+"Some files cannot be moved to trash can because the underlying file systems "
 "don't support this operation.\n"
-"Are you want to delete them instead?"
+"Do you want to delete them instead?"
 msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:422
