--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-25 03:06+0800\n"
-"PO-Revision-Date: 2010-03-18 23:17+0800\n"
-"Last-Translator: 洪任諭 <pcman.tw@gmail.com>\n"
+"POT-Creation-Date: 2010-04-25 03:19+0800\n"
+"PO-Revision-Date: 2010-04-25 03:22+0800\n"
+"Last-Translator: Hong Jen Yee (PCMan) <pcman.tw@gmail.com>\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -348,6 +348,9 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"類型：%s\n"
+"大小：%s\n"
+"修改：%s"
 
 #: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
 #, c-format
@@ -355,6 +358,8 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"類型：%s\n"
+"修改：%s"
 
 #: ../src/gtk/fm-progress-dlg.c:302
 msgid "The file operation is cancelled and there are some errors."
@@ -374,10 +379,12 @@ msgstr "已完成"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid ""
-"Some files cannot be moved to trash can becausethe underlying file systems "
+"Some files cannot be moved to trash can because the underlying file systems "
 "don't support this operation.\n"
-"Are you want to delete them instead?"
+"Do you want to delete them instead?"
 msgstr ""
+"因為檔案系統不支援，有些檔案無法被移到垃圾桶\n"
+"你是否要直接刪除這些檔案？"
 
 #: ../src/gtk/fm-progress-dlg.c:422
 msgid ", "
@@ -494,11 +501,11 @@ msgstr "解壓縮到..."
 
 #: ../src/gtk/fm-file-menu.c:244
 msgid "_Restore"
-msgstr ""
+msgstr "復原(_R)"
 
 #: ../src/gtk/fm-file-menu.c:245
 msgid "Restore trashed files to original paths"
-msgstr ""
+msgstr "還原刪除的檔案到原本的位置"
 
 #: ../src/gtk/fm-dnd-dest.c:449
 msgid "XDirectSave failed."
@@ -546,7 +553,7 @@ msgstr "選擇一個資料夾"
 
 #: ../src/gtk/fm-gtk-utils.c:385
 msgid "Only system administrators have the permission to do this."
-msgstr ""
+msgstr "只有系統管理員有權限進行這項操作。"
 
 #: ../src/gtk/fm-gtk-utils.c:460
 msgid "Do you want to move the selected files to trash can?"
